k8s/tienda/templates/ingress/client-gateway.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tienda-ingress
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client-gateway
                            port:
                                number: 3000
